kubernetes/archive/deploy/helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  annotations:
    metallb.io/address-pool: ingress-pool
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: helloworld
  type: LoadBalancer
